# rag-ollama-chroma-apple

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
test/: docker-compose-chroma.yml
