[tool.poetry]
name = "rag-ollama-chroma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.22.0"
langchain-core = "^0.1.33"
bs4 = "^0.0.2"
tiktoken = "^0.6.0"
langchain-community = "^0.0.29"
chromadb = "^0.4.24"
langchain-text-splitters = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
